--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,6 +23,39 @@
 
 @import "~codemirror/theme/material.css"
 
+.editQuery
+    cursor: pointer
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    width: 15%
+    background-color: #232323
+    height: 100%
+    img
+        height: 25px
+        margin: auto 0px auto 35px
+    div
+        margin: auto
+        height: 25px
+
+.IconEditQuery
+    color: white
+    margin: auto 25px
+    margin-left: 0px
+    height: 15px
+
+.headerWS
+    display: flex
+    flex-direction: row
+    align-items: center
+    flex-wrap: wrap
+    height: 70px
+
+.BodyWS
+    display: flex
+    flex-direction:column
+    height: calc(100% - 70px)
+
 .CodeMirror
     height: 300px !important
 
