--- a/src/app/web-services/web-services.component.html
+++ b/src/app/web-services/web-services.component.html
@@ -300,11 +300,15 @@
                                             <mat-form-field>
                                                 <input matInput placeholder="Argument Name" [(ngModel)]="arg.label" [ngModelOptions]="{standalone: true}" name="argumentName">
                                             </mat-form-field>
+                                            <!-- <mat-select [formControl]="argumentsForm.get('argumentType')" style=" margin-right: 50px; margin-left: 50px; width: 240px" autocomplete="off" name="types" [(ngModel)]="arg.type" [ngModelOptions]="{standalone: true}" name="argumentType" required> -->
                                             <mat-select style=" margin-right: 50px; margin-left: 50px; width: 240px" autocomplete="off" name="types" [(ngModel)]="arg.type" [ngModelOptions]="{standalone: true}" name="argumentType" required>
-                                                <mat-option value="string">String</mat-option>
+                                                 <mat-option value="string">String</mat-option>
                                                 <mat-option value="number">Number</mat-option>
                                                 <mat-option value="date">Date</mat-option>
                                                 <mat-option value="list">List</mat-option>
+                                                <!-- <mat-error *ngIf="argumentsForm.get('argumentType')?.hasError('required')">
+                                                        {{getErrorTypeArguments()}}
+                                                    </mat-error> -->
                                             </mat-select>
                                             <mat-checkbox [(ngModel)]="arg.requiredBool" (click)="setRequired(arg)" [ngModelOptions]="{standalone: true}">Required</mat-checkbox>
                                             <!--<mat-radio-group style="margin-bottom:10px" [(ngModel)]="arg.required" name="argumentReq" #radioGroup="matRadioGroup">
