save value of wrapped

--- a/src/app/web-services/web-services.component.html
+++ b/src/app/web-services/web-services.component.html
@@ -593,10 +593,13 @@
                                     <input class="server-config" placeholder="Description" matInput [(ngModel)]="selectconcat.description" name="description">
                                 </mat-form-field>
     
-                                <mat-select class="server-config" autocomplete="off" name="types" [(ngModel)]="selectconcat.method" [ngModelOptions]="{standalone: true}" name="method" required>
+                                <!--comentado kp20190507 <mat-select class="server-config" autocomplete="off" name="types" [(ngModel)]="selectconcat.method" [ngModelOptions]="{standalone: true}" name="method" required>
                                     <mat-option value="GET">GET</mat-option>
                                     <mat-option value="POST">POST</mat-option>
-                                    <!-- <mat-option value="BOTH">GET/POST</mat-option> -->
+                                </mat-select> -->
+                                <mat-select class="server-config" autocomplete="off" [(ngModel)]="selectconcat.wrapped" [ngModelOptions]="{standalone: true}" name="wrapped" required>
+                                    <mat-option value="1">Wrapped</mat-option>
+                                    <mat-option value="0">Not Wrapped</mat-option>
                                 </mat-select>
                             </div>
                         </form>
