--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,6 +23,7 @@
 
 @import "~codemirror/theme/material.css"
 
+//kp
 .BodyQueryEdit
     display: flex
     flex-direction: row
@@ -31,20 +32,20 @@
     height: calc(100% - 50px)
     padding: 30px 50px 60px 60px
 
-
+//kp
 .headerWS
     display: flex
     flex-direction: row
     flex-wrap: wrap
-
+//kp
 .headerWS_Div
     align-items: center
     height: 70px
-
+//kp
 .headerWsTitle
     padding: 0px
     margin: auto 0px
-
+//kp
 .editQuery
     cursor: pointer
     width: 15%
@@ -56,21 +57,21 @@
     div
         margin: auto
         height: 25px
-
+//kp
 .IconEditQuery
     color: white
     margin: auto 25px
     margin-left: 0px
     height: 15px
-
+//kp
 .BodyWS
     display: flex
     flex-direction: column
     height: calc(100% - 70px)
-
+//kp
 .CodeMirror
     height: 300px !important
-
+//kp
 .InfoQuery
     padding-bottom: 15px
     height: 245px
@@ -78,21 +79,22 @@
     font-size: 12px
     text-align: justify
 
+//kp
 .ocultar2
     // display: none  !important
     height:  0px !important
     transition: 0.25s
     padding: 0px !important
 
-
+//kp
 .mostrar2
     // display: block
     height: auto !important
     transition: 0.25s
-
+//kp
 .ocultar
     display: none  !important
-
+//kp
 .mostrar
     display: block
 
