--- a/src/styles.sass
+++ b/src/styles.sass
@@ -73,11 +73,20 @@
     height: 300px !important
 //kp
 .InfoQuery
-    padding-bottom: 15px
-    height: 245px
+    margin-bottom: 15px
+    height: 241px
     font-weight: lighter
-    font-size: 12px
     text-align: justify
+    background-color: #1e1e1e
+    padding: 4px 10px
+    overflow-y: auto
+
+    // textarea.mat-input-element
+    //     height: 240px !important
+    //     max-height: 240px !important
+    //     font-weight: lighter
+    //     font-size: 12px
+    //     text-align: justify
 
 //kp
 .ocultar2
