--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .headerWS_Div {
@@ -47,15 +48,20 @@
   margin: auto 0px auto 35px;
 }
 .editQuery div {
-  margin: auto;
+  margin: 0px auto;
   height: 25px;
+}
+
+.IconAct {
+  color: #01abec;
+  margin: 0px;
+  height: auto !important;
 }
 
 .IconEditQuery {
   color: white;
-  margin: auto 25px;
-  margin-left: 0px;
-  height: 15px;
+  margin: 0px;
+  height: auto !important;
 }
 
 .BodyWS {
