--- a/src/styles.sass
+++ b/src/styles.sass
@@ -37,6 +37,7 @@
     display: flex
     flex-direction: row
     flex-wrap: wrap
+    align-items: center
 //kp
 .headerWS_Div
     align-items: center
@@ -55,14 +56,23 @@
         height: 25px
         margin: auto 0px auto 35px
     div
-        margin: auto
+        margin: 0px auto
         height: 25px
+
 //kp
+.IconAct
+    color: $msf-secondary-color
+    margin: 0px
+    height: auto !important
+
 .IconEditQuery
     color: white
-    margin: auto 25px
-    margin-left: 0px
-    height: 15px
+    margin: 0px
+    // margin: auto 25px
+    // margin-left: 0px
+    // height: 15px
+    height: auto !important
+
 //kp
 .BodyWS
     display: flex
@@ -3588,6 +3598,8 @@ textarea.mat-input-element
 
 .placeholder
     color: rgba(148, 147, 147, 0.87)
+
+
 
 
 
