--- a/src/styles.sass
+++ b/src/styles.sass
@@ -28,7 +28,7 @@
     display: flex
     flex-direction: row
     align-items: center
-    background-color: #232323 
+    background-color: #232323
     height: calc(100% - 50px)
     padding: 30px 50px 60px 60px
 
@@ -3599,7 +3599,14 @@ textarea.mat-input-element
 .placeholder
     color: rgba(148, 147, 147, 0.87)
 
+.darktable
+    background-color: #1e1e1e
+    border: none
 
+.darktable-row
+    background-color:#232323
+    color: white
+    justify-content: center
 
 
 
